# api-sports-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  run_server.py  test_mcp_connection.py  test_mcp_protocol.py  test_mcp_simple.py  test_server_init.py
.github/workflows/: ci.yml
mcp_server_api_sports/: __init__.py  __main__.py  config.py  logger.py  server.py  server_fastmcp.py  server_http.py
mcp_server_api_sports/models/: __init__.py  api_models.py
mcp_server_api_sports/services/: __init__.py  api_sports_service.py  cache_service.py
mcp_server_api_sports/tools/: __init__.py  fixtures.py  statistics.py  teams.py
tests/: __init__.py  conftest.py  test_service.py
tests/test_tools/: test_fixtures.py  test_statistics.py  test_teams.py
