[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-api-sports"
version = "0.1.0"
description = "MCP server for API-Sports football data integration"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Betforward", email = "support@betforward.com"}]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.0.0",
    "uvicorn>=0.23.0",
    "starlette>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.13.0",
]

[project.scripts]
mcp-server-api-sports = "mcp_server_api_sports.server:run"
mcp-server-api-sports-http = "mcp_server_api_sports.server_http:main"
mcp-server-api-sports-fastmcp = "mcp_server_api_sports.server_fastmcp:run_http"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --cov=mcp_server_api_sports --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "N815", # Variable in class scope should not be mixedCase
    "W293", # Blank line contains whitespace
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105"]
"__init__.py" = ["F401", "F403", "F405"]

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ["py310"]